...

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@id/delete_btn"
            android:padding="8dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_big"
            tools:text="Название" />

        <ImageButton
...
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/delete_btn"
            android:background="@color/lightGrey" />

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:padding="8dp"
            android:textColor="@color/accentDarkColor"
            android:textSize="@dimen/text_size_normal"
...
